--- a/src/components/ThemeSwitcher/ThemeSwitcher.scss
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.scss
@@ -13,6 +13,9 @@ $star: #fff;
 $cloud: #fefefe;
 
 .switch__wrapper {
+  width: max-content;
+  margin-left: auto;
+
   &-input {
     display: none;
   }
