--- a/src/index.scss
+++ b/src/index.scss
@@ -28,9 +28,13 @@
 
 body {
   min-height: 100vh;
-  font-family: 'Open Sans', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Sigmar', cursive;
+  font-size: 16px;
+}
+
+input, button {
+  font-family: 'Sigmar', cursive;
+  font-size: 16px;
 }
 
 h1, h2, h3, h4, h5, h6 {
