--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,10 @@
 @import './utils/_variables.scss';
 
 .content {
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   width: 100%;
+  padding: 30px 0;
   background-color: $light-dark-blue;
 
   &.dark {
@@ -10,11 +12,9 @@
   }
 
   &__container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-height: 90vh;
+    min-height: calc(100vh - 60px);
+    height: 100%;
+    margin: 0 auto;
     width: 95%;
     padding: 20px;
     border-radius: 40px;
