Main pages were implemented

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@
     height: 100%;
     margin: 0 auto;
     width: 95%;
+    max-width: 1400px;
     padding: 20px;
     border-radius: 40px;
     background-color: $light-blue;
