--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,4 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  &__link-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
 }
