--- a/src/components/MainScreen/MainScreen.scss
+++ b/src/components/MainScreen/MainScreen.scss
@@ -31,9 +31,15 @@
     background-color: $dark-dark-blue;
     border-radius: 25px;
     box-shadow: 0 0 10px 10px rgba(255, 255, 255, 0.2);
+    transition: all 0.4s;
 
     &:first-child {
       margin-right: 75px;
+    }
+
+    &:hover {
+      box-shadow: 0 0 10px 10px rgba(255, 255, 255, 0.8);
+      transform: translateY(-5px);
     }
 
     &.dark {
@@ -41,6 +47,50 @@
       background-color: $light-blue;
       border-radius: 25px;
       box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2);
+
+      &:hover {
+        box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.8);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .main-screen {
+    &__content {
+      margin-top: 55px;
+    }
+
+    &__link-button {
+      padding: 20px 40px;
+      border-radius: 20px;
+  
+      &:first-child {
+        margin-right: 55px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .main-screen {
+    &__content {
+      margin-top: 35px;
+    }
+
+    &__link-wrapper {
+      flex-direction: column;
+      gap: 20px;
+      margin-top: 55px;
+    }
+
+    &__link-button {
+      padding: 10px 20px;
+      border-radius: 10px;
+
+      &:first-child {
+        margin-right: 0;
+      }
     }
   }
 }
