--- a/src/components/ThemeSwitcher/ThemeSwitcher.scss
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.scss
@@ -54,7 +54,7 @@ $cloud: #fefefe;
     display: inline-block;
     width: $switch-width;
     height: $switch-height;
-    cursor: pointer;
+    cursor: url(https://cdn.custom-cursor.com/db/5919/32/material-custom-pointer.png) , pointer;
     border-radius: $switch-width/2;
     border: 1px solid #eee; 
     background-color: $sky-day;
@@ -79,7 +79,7 @@ $cloud: #fefefe;
     width: $switch-height - 5;
     top: 50%;
     left: 2px;
-    cursor: pointer;
+    cursor: url(https://cdn.custom-cursor.com/db/5919/32/material-custom-pointer.png) , pointer;
     transform: translateY(-50%);
     background-color: $sun;
     background-image: radial-gradient(circle, $sun-center 15%, $sun 100%);
@@ -94,4 +94,21 @@ $cloud: #fefefe;
   }
 }
 
+@media screen and (max-width: 768px) {
+  .switch__wrapper {
+    &-label {
+      width: 50px;
+      height: 20px;
 
+      &::before {
+        height: 18px;
+        width: 18px;
+        left: 1px;
+      }
+    }
+
+    &-input:checked ~ .switch__wrapper-label:before {
+      transform: translate(27px, -50%);
+    }
+  }
+}
